--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ venv.bak/
 presentation.pptx
 junk
 turcsan description.docx
+voterdata/FOIL_VOTER_LIST_LAYOUT.pdf
+voterdata/AllNYSVoters_02112019.txt
