--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ junk
 turcsan description.docx
 voterdata/FOIL_VOTER_LIST_LAYOUT.pdf
 voterdata/AllNYSVoters_02112019.txt
+dogdata/Personality_in_dogs.pdf
+dogdata/SerpellDuffyinHorowitz-2014.pdf
+dogdata/Use of questionnaire-based data to assess dog personality.pdf
